projects/vb6parse/snapshots/parsers/cst/library/type_checking/isempty/isempty_collection_add.snap
---
source: projects/vb6parse/tests/library/type_checking/isempty.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: states
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Add
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: IsEmpty
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: data
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: IdentifierExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: i
                                        - kind: RightParenthesis
                                          text: )
                            - kind: RightParenthesis
                              text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
